test_scores/negative_dimers/features/Q5T8P6.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q5T8P6.pkl.xz